# Pong-Game

./: CMakeLists.txt
cmake_modules/: FindSFML.cmake
src/main/: main.cpp  main.h
src/main/game/: Game.cpp  Game.h
src/main/game/abstract/: AbstractGame.h
src/main/game/duo/: DuoGame.cpp  DuoGame.h
src/main/game/solo/: SoloGame.cpp  SoloGame.h
src/main/menu/: Menu.cpp  Menu.h
src/main/object/abstract/: AbstractObject.h
src/main/object/ball/: BallObject.cpp  BallObject.h
src/main/object/paddle/: PaddleObject.cpp  PaddleObject.h
src/main/util/: Location.cpp  Location.h
